# Dynamic_World_Generator_ros2_control

./: .gitignore  CHANGELOG.md  CLAUDE.md  MEMORY.md  README.md  patch_world_manager.py  repomix.config.json  setup_env.sh  setup_status.md  test_app.py  test_gc.py  test_gui.py  test_gz.py  test_radio.py  test_sync.py  test_toggle.py  walkthrough.md
code/control_ws/src/dynamic_obstacle_gz_spawning/: CMakeLists.txt  package.xml  setup.cfg  setup.py
code/control_ws/src/dynamic_obstacle_gz_spawning/config/: obstacles.yaml  obstacles_controller.yaml
code/control_ws/src/dynamic_obstacle_gz_spawning/launch/: multi_obstacle_world.launch.py
code/control_ws/src/dynamic_obstacle_gz_spawning/maps/: aboureyhan.pgm  aboureyhan.yaml  final_scenario.pgm  final_scenario.yaml  maze_orthogonal.pgm  maze_orthogonal.yaml
code/control_ws/src/dynamic_obstacle_gz_spawning/multi_object_scripts/: trajectory_publisher.py  utils.py
code/control_ws/src/dynamic_obstacle_gz_spawning/params/: wheelchair_bridge.yaml
code/control_ws/src/dynamic_obstacle_gz_spawning/worlds/: aboureyhan.sdf  ali.sdf  asd.sdf  depot.sdf  dfdsfsd.sdf  fgdg.sdf  final_scenario.sdf  height_map.sdf  maze.sdf  maze_orthogonal.sdf  new.sdf  sdfsd.sdf  sdg.sdf  sf.sdf  sli.sdf  turtlebot3_world.sdf  wall.sdf  warehouse.sdf
code/control_ws/src/dynamic_obstacle_gz_spawning/worlds/models/turtlebot3_world/: model.sdf
code/control_ws/src/dynamic_obstacle_isaacsim_spawning/: README.md  package.xml  setup.cfg  setup.py
code/control_ws/src/dynamic_obstacle_isaacsim_spawning/config/: obstacles.yaml  obstacles_controller.yaml
code/control_ws/src/dynamic_obstacle_isaacsim_spawning/dynamic_obstacle_isaacsim_spawning/: __init__.py
code/control_ws/src/dynamic_obstacle_isaacsim_spawning/isaacsim_scripts/: __init__.py  isaacsim_spawner.py  isaacsim_standalone.py  trajectory_publisher.py  utils.py
code/control_ws/src/dynamic_obstacle_isaacsim_spawning/launch/: isaacsim_obstacle_spawner.launch.py
(+28 files in other folders)
